updating working experience

--- a/public/index.html
+++ b/public/index.html
@@ -208,6 +208,22 @@
                     <h2>Working Experience</h2>
                 </header>
                 <div class="timeline">
+                    <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+                        <div class="timeline-text">
+                            <div class="timeline-date">07/2022 - 01/2023</div>
+                            <h2>Technical Lead</h2>
+                            <h4>Ally Bank</h4>
+                            <h6>Charlotte, NC</h6>
+                            <p>
+                                Maintained software products including programs, webpages, and databases.<br><br/>
+                                Performed software testing, and developed plans for future software development.<br><br/>
+                                Managed CICD pipelines for team members.<br><br/>
+                                Architeched new solutions to meet customer needs.<br><br/>
+                                Worked in SCRUM team and attended SCRUM ceremonies to effectively deliver new features.<br><br/>
+                                Built new features using AWS Lambda, NodeJS, React, and other technologies.
+                            </p>
+                        </div>
+                    </div>
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">10/2021 - 04/2022</div>
