removing resime button

--- a/public/index.html
+++ b/public/index.html
@@ -296,9 +296,9 @@
                         </div>
                     </div>
             </div>
-            <!-- <button class="btn" id="downloadResumeButton">
+            <!-- <button class="btn" id="downloadResumeButton"> -->
                 <!-- <a href="brandon_counts_resume.pdf" download="Brandon Counts Resume"></a> -->
-                Download My Resume
+                <!-- Download My Resume
             </button> -->
 
 
