--- a/public/index.html
+++ b/public/index.html
@@ -208,6 +208,18 @@
                     <h2>Working Experience</h2>
                 </header>
                 <div class="timeline">
+                    <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+                        <div class="timeline-text">
+                            <div class="timeline-date">10/2021 - current</div>
+                            <h2>Senior Software Engineer</h2>
+                            <h4>Swell Energy</h4>
+                            <!-- <h6>Charlotte, NC</h6> -->
+                            <p>
+                              
+                            </p>
+                        </div>
+                    </div>
+
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">07/2022 - 01/2023</div>
