--- a/public/index.html
+++ b/public/index.html
@@ -757,14 +757,14 @@
                         <h2>Brandon Counts</h2>
                         <h3>Winston Salem, NC USA</h3>
                         <div class="footer-menu">
-                            <p>+337 784 4173</p>
+                            <p>+1 337 784 4173</p>
                             <p>brandon@brandoncounts.us</p>
                         </div>
                         <div class="footer-social">
-                            <a href=""><i class="fab fa-twitter"></i></a>
+                            <!-- <a href=""><i class="fab fa-twitter"></i></a>
                             <a href=""><i class="fab fa-facebook-f"></i></a>
                             <a href=""><i class="fab fa-youtube"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href=""><i class="fab fa-instagram"></i></a> -->
                             <a href="https://www.linkedin.com/in/brandon-counts-67910823a/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
