--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Brandon Counts</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
+        <meta content="Brandon Counts" name="keywords">
+        <meta content="Brandon Counts" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
