--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,7 @@
         <title>Brandon Counts</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Brandon Counts" name="keywords">
-        <meta content="Brandon Counts" name="description">
-
+        <meta content="Software Engineer" name="description">
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
 
